workshop7/cert-manager/blazor-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspnet-demo
  labels:
    app: aspnet-demo
    service: aspnet-demo
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    service: aspnet-demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspnet-demo
  labels:
    app: aspnet-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      service: aspnet-demo
  template:
    metadata:
      labels:
        app: aspnet-demo
        service: aspnet-demo
    spec:
      containers:
        - name: aspnet-demo
          image: pnk8s101/aspnet-demo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 32m
              memory: 64Mi
            limits:
              cpu: 64m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 5
            initialDelaySeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 5
            initialDelaySeconds: 30
