workshop7/cert-manager/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __YOUR_NAME__-ingress
  annotations:
    # 使用 annotations 告訴 cert-manager 要使用哪個簽發商
    # 詳情: https://cert-manager.io/docs/usage/ingress/#supported-annotations
    cert-manager.io/issuer: "__YOUR_NAME__-letsencrypt-staging"
spec:
  tls:
  - hosts:
    - __YOUR_NAME__.workshop7.demomrvn.online
    secretName: __YOUR_NAME__-tls
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aspnet-demo
            port:
              number: 80
    host: "__YOUR_NAME__.workshop7.demomrvn.online"
